--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,70 +1,78 @@
-
-* {
-    color:white;
-    background-color: white;
+.auth-wrapper {
+    display:flex;
+    margin-top: 10px;
+    justify-content: center;
 }
 
-body {
-    margin: 0;
-    background-color: #4f5b62;
+.auth-panel {
+    width: 500px;
+    padding: 10px;
+    color:black;
+
+    border:1px solid gray;
 }
 
-menu {
-  display: block;
-  list-style-type: disc;
-  margin-top: 1em;
-  margin-bottom: 1em;
-  margin-left: 0;
-  margin-right: 0;
-  padding-left: 40px;
+.auth-panel > table {
+    border-collapse:collapse;
 }
 
-.content {
-    margin: 0 5vw 0 5vw;
-    height:100vh;
+.auth-tabs,
+.auth-tabs > td {
+    padding: 0;
+    margin:0;
 }
 
-.main-menu {
-    background-color: #263238;
-    height:50px;
-    padding: 0 20px 0 20px;
+.auth-tabs > td {
+    width:50%;
 }
 
-.main-menu-item {
-    color:inherit;
-    text-decoration: none;
-    float:right;
-}
-
-.main-menu-item:hover {
-    background-color: rgba(1,1,1,0.1);
-}
-
-.main-menu-item,
-.main-menu-title {
-    line-height:50px;
+.auth-tab-label {
     background-color: inherit;
-    padding: 0 15px 0 15px;
-    outline: 0;
+    padding:10px;
+    margin: 0;
+    cursor:pointer;
+    color:lightgray;
+    text-align: center;
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
 }
 
-.login-form {
-    display:block;
-    margin-top:20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.login-form * {
+.auth-tab-label.auth-tab-active {
+    background-color: white;
     color:black;
 }
 
-.login-form > table {
-    max-width: 300px;
+.auth-form {
+    margin-top: 10px;
 }
 
-.login-button {
-    margin-top: 10px;
-    float:right;
+.auth-panel tr > td {
+    text-align: right;
+    width:50%;
+}
+
+.auth-panel tr p {
+    text-align: left;
+}
+
+.auth-panel .auth-input {
+    width:100%;
+    margin:5px;
+    padding:5px;
+}
+
+.auth-panel button[type="submit"] {
+    background-color: white;
+    color:black;
+    height:30px;
+    width:90px;
+    margin-top: 5px;
+    border:1px solid gray;
+}
+
+.auth-panel button[type="submit"]:hover {
+    background-color: lightgray;
+    color:black;
 }
