--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,49 +1,110 @@
 
-* {
-    background-color: white;
+body { 
+    margin:0;
+    background-color:#121212; 
 }
 
-body {
-    margin: 0;
-    background-color: #4f5b62;
+.main-wrapper { 
+    background-color:rgba(255,255,255,0.08); 
+    padding-top: 0 10px 10px 10px;
+    max-width: 80vw;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.body-wrapper {
-    margin: 0 5vw 0 5vw;
-    height:100vh;
+input:focus, a, body {
+    color:rgba(255,255,255,0.9);
 }
 
-menu {
-  display: block;
-  list-style-type: disc;
-  margin-top: 1em;
-  margin-bottom: 1em;
-  margin-left: 0;
-  margin-right: 0;
-  padding-left: 40px;
+.main-wrapper {
+    max-width: 80vw;
+    min-height: 100vh;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.main-header {
+    display: flex;
+    height:  30px;
+    margin-bottom: 40px;
+    background-color:rgba(255,255,255,0.08);
+}
+
+.main-header-image {
+    width:   60px;
+    height:  60px;
+    z-index: 1;
+    padding: 5px;
+    margin-left: 10px;
+}
+
+.main-header-name {
+    line-height: 30px;
+    font-weight: bold;
+    margin-left: 10px;
+}
+
+.main-header-search {
+    margin-right: 10px;
+    line-height:  30px;
+}
+
+input {
+    background-color:#222222;
+    border: none;
+    padding: 3px;
+    color: gray;
+}
+
+input:focus {
+    background-color:#121212;
+}
+
+.main-header-links {
+    display:      flex;
+    margin-right: 10px;
+}
+
+.main-header-links > * {
+    margin-left:     10px;
+    text-decoration: none;
+    line-height:     30px;
+    padding-left:    5px;
+    padding-right:   5px;
+    transition: background-color 0.125s ease-in;
+}
+
+.main-header-links > *:hover {
+    background-color:rgba(255,255,255,0.08);
 }
 
 .main-menu {
-    background-color: #263238;
-    color:white;
-    height:50px;
-    padding: 0 20px 0 20px;
+    margin-left: auto;
+    display: flex;
 }
 
-.main-menu-item {
-    color:inherit;
-    text-decoration: none;
-    float:right;
+.content {
+    padding: 10px;
+    min-height: 360px;
 }
 
-.main-menu-item:hover {
-    background-color: rgba(1,1,1,0.1);
+.main-footer {
+    padding: 10px;
+    display:flex;
+    height: 60px;
+    margin-top: auto;
 }
 
-.main-menu-item,
-.main-menu-title {
-    line-height:50px;
-    background-color: inherit;
-    padding: 0 15px 0 15px;
-    outline: 0;
+.main-footer div {
+    display:flex;
+    flex-direction: column;
+    margin-right: 10px;
+}
+
+.main-footer-copyright,
+.main-footer a {
+    font-size: 0.75em;
+    margin-bottom: 5px;
 }
