--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -5,8 +5,8 @@
 
 .profile-wrapper {
     display:flex;
+    max-height: 100vh;
     align-items: stretch;
-    height:100%;
 }
 
 .profile-wrapper > * {
@@ -32,15 +32,19 @@
 
 .profile-body {
     flex-grow: 2;
+    display: flex;
     padding-top:0;
     padding-bottom:0;
 }
 
+
+
+ /* Editor */
 .editor-form {
     display:flex;
     flex-direction: column;
     width:100%;
-    height:100%;
+    height:50vh;
 }
 
 .editor-menu {
@@ -61,4 +65,56 @@
     border: 1px solid rgba(0,0,0,0.25);
     color:white;
     padding:10px;
+    overflow-y: scroll;
+}
+
+.js-editor-toolbar {
+    display:none;
+    padding: 5px;
+    background-color: rgba(255,255,255,0.1);
+}
+
+.js-editor-toolbar > button {
+    background-color: transparent;
+    border: none;
+    color: white;
+    cursor: pointer;
+}
+
+.js-editor-toolbar > button:hover {
+    background-color: rgba(255,255,255,0.2);
+}
+
+.js-editor-field {
+    display:none;
+}
+
+/* Feed */
+.feed {
+    width:300px;
+    margin:0 3px 0 3px;
+    padding:5px 3px 5px 3px;
+    text-align: center;
+    background-color: rgba(0,0,0,0.5);
+    overflow-y: scroll;
+}
+
+.post {
+    padding:10px;
+    margin-bottom:5px;
+    text-align: left;
+    background-color: rgba(255,255,255,0.2);;   
+}
+
+.post > * {
+    padding: 2px;
+}
+
+.post-body {
+    padding:10px;
+    background-color: rgba(0,0,0,0.1);
+}
+
+.post-toolbar {
+    text-align: right;
 }
