--- a/static/css/public/search.css
+++ b/static/css/public/search.css
@@ -1,46 +1,73 @@
 
-.search-result-wrapper {
+.search-bar {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+.search-bar-advanced,
+.search-bar-input {
     display: flex;
-    width:100%;
-    height:100%;
+    width: 33vw;
 }
 
-.search-results {
+.search-bar-advanced {
+    flex-direction: column;
+    align-items: center;
+}
+
+.search-bar-input > input {
     flex-grow: 1;
-    border: 1px solid gray;
+    margin-right: 10px;
+    background-color: rgba(0,0,0,0.5);
 }
 
-.result-title {
-    font-size: 1.5em;
-    padding-left:15px;
-    color:Gray;
+.search-bar-input > button {
+    border: none;
+    cursor:pointer;
 }
 
-.person {
-    display:flex;
+.hidden-toggle {
+    display:none;
+}
+
+.title {
+    user-select: none;
+    cursor:pointer;
     padding: 10px;
+    width:100%;
 }
 
-.person > * {
-    margin-left:5px;
-    margin-right:5px;
-}
-
-.person > .avatar {
-    height:50px;
-    width: 50px;
-}
-
-.post {
-    display:flex;
+.advanced {
+    display: flex;
+    height:0px;
+    overflow: hidden;
+    width:100%;
     padding: 10px;
+    margin-bottom:10px;
+    border: 1px solid transparent;
+    transition: all 0.1s ease-in;
+}
+
+.advanced-left,
+.advanced-right {
+    display: flex;
+    flex-grow: 1;
     flex-direction: column;
 }
 
-.post > .title {
-
+.advanced label {
+    font-size: 0.75em;
 }
 
-.post > .body {
+.hidden-toggle:checked + .title + .advanced {
+    height:240px;
+    border: 1px solid rgba(255,255,255,0.25);
+}
 
+.search-results {
+    flex-grow: 2;
+    height:1000px;
+    width:100%;
 }
