--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,112 +1,82 @@
-* {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-    font-size: 1em;
-}
 
-body { 
+body {
     margin:0;
-    background-color:#121212; 
+    padding: 0;
 }
 
-.main-wrapper { 
-    background-color:rgba(255,255,255,0.08); 
-    padding-top: 0 10px 10px 10px;
-}
-
-input:focus, a, body {
-    color:rgba(255,255,255,0.9);
-}
-
-.main-wrapper {
-    min-height: 100vh;
-    margin-left: auto;
-    margin-right: auto;
+.page {
     display: flex;
     flex-direction: column;
+    align-items: stretch;
+    
+    min-height:100vh;
+    max-width: 80vw;
+    
+    margin-left:auto;
+    margin-right:auto;
 }
 
-.main-header {
-    display: flex;
-    height:  30px;
-    margin-bottom: 40px;
-    background-color:rgba(255,255,255,0.08);
-    box-shadow: 5px 5px 5px rgba(0,0,0,0.1);
+.page__header,
+.page__content,
+.page__footer {
+    font-size:1.2em;
+    padding:10px;
+    display:flex;
 }
 
-.main-header-image {
-    width:   60px;
-    height:  60px;
-    z-index: 1;
-    padding: 5px;
-    margin-left: 10px;
-    border-radius: 10px;
+.page__header {
+    line-height:35px;
+    height:40px;
 }
 
-.main-header-name {
-    line-height: 30px;
-    font-weight: bold;
-    margin-left: 10px;
-}
-
-.main-header-search {
-    margin-right: 10px;
-    line-height:  30px;
-}
-
-input {
-    background-color:#222222;
-    border: none;
-    padding: 3px;
-    color: gray;
-}
-
-input:focus {
-    background-color:#121212;
-}
-
-.main-header-links {
-    display:      flex;
-    margin-right: 10px;
-}
-
-.main-header-links > * {
-    margin-left:     10px;
+.page__header__title {
     text-decoration: none;
-    line-height:     30px;
-    padding-left:    5px;
-    padding-right:   5px;
-    transition: background-color 0.125s ease-in;
 }
 
-.main-header-links > *:hover {
-    background-color:rgba(255,255,255,0.08);
-}
-
-.main-menu {
+.page__header__search {
     margin-left: auto;
-    display: flex;
 }
 
-.content {
-    padding: 10px;
-    min-height: 360px;
-}
-
-.main-footer {
-    padding: 10px;
+.page__header__menu {
+    margin-left:10px;
     display:flex;
-    height: 60px;
-    margin-top: auto;
+    align-items: stretch;
+    justify-content: stretch;
 }
 
-.main-footer div {
+.menu__item {
+    text-decoration: none;
+    padding:0 10px 0 10px;
+}
+
+.page__content {
+    flex-direction: column;
+    flex-grow:1;
+}
+
+.page__footer {
+    font-size: 0.8em;
+}
+
+.page__footer__column {
     display:flex;
     flex-direction: column;
-    margin-right: 10px;
+    margin-right:5px;
 }
 
-.main-footer-copyright,
-.main-footer a {
+.form__input--white,
+.form__input--blue {
+    padding:5px;
+    border-radius: 3px;
+}
+
+.form__button {
+    height:30px;
+    width:60px;
+    padding-bottom: 2px;
+    cursor:pointer;
+}
+
+.user__menu {
     font-size: 0.75em;
-    margin-bottom: 5px;
 }
