--- a/resources/css/profile/friends.scss
+++ b/resources/css/profile/friends.scss
@@ -1,1 +1,11 @@
 @import '../base';
+
+.friend__request {
+    .clickable {
+        background-color: transparent;
+    }
+}
+
+.friend__card {
+
+}
