--- a/resources/css/public/post.scss
+++ b/resources/css/public/post.scss
@@ -1,1 +1,34 @@
 @import '../base';
+
+.post {
+    border: 1px solid gray;
+    width: 50%;
+    margin:20px auto 0 auto;
+    padding:10px;
+
+    .post__title {
+        margin:0;
+    }
+
+    .post__body {
+        padding:10px;
+    }
+    
+    .post__created {
+        color:gray;
+    }
+
+    .comments {
+        margin:10px 0 0 0;
+
+        .comment__field {
+            min-height:25px;
+            resize: vertical;
+        }
+
+        .comment__button {
+            align-self: flex-end;
+        }
+
+    }
+}
