--- a/resources/css/base.scss
+++ b/resources/css/base.scss
@@ -36,6 +36,7 @@ $layer1-light:      rgba(255,255,255,0.25);
 $layer1-lighter:    rgba(255,255,255,0.4);
 $layer1-dark:       rgba(0,0,0,0.25);
 $layer1-darker:     rgba(0,0,0,0.4);
+$layer1-darkest:    rgba(0,0,0,0.75);
 $layer1-text:       white;
 $layer1-text-faded: rgba(255,255,255,0.5);
 
@@ -97,6 +98,7 @@ body {
    out the site.
 */
 .clickable {
+    background:none;
     cursor:pointer;
     border:none;
     padding:3px 5px 3px 5px;
