--- a/resources/css/profile/settings.scss
+++ b/resources/css/profile/settings.scss
@@ -1,1 +1,19 @@
 @import '../base';
+
+.section {
+    display: block;
+    width: 500px;
+    margin:20px auto 0 auto;
+
+    h1 { 
+        margin-left:0;
+        font-size: 1.2em; }
+    h2 { 
+        margin-left:10px;
+        font-size: 1.1em; }
+
+    .view__input {
+        margin-left:5px;
+    }
+
+}
