--- a/resources/css/public/user.scss
+++ b/resources/css/public/user.scss
@@ -34,10 +34,11 @@ $button-hover-color: rgba(0,0,0,0.25);
         flex-grow: 1;
 
         .feed__post {
-            margin:5px;
+            margin:20px 5px 20px 5px;
             padding:5px;
             border:1px solid rgba(0,0,0,0.25);
             box-shadow:5px 5px 5px rgba(0,0,0,0.1);
+            max-width:500px;
 
             .post__title {
                 font-size: 1.5em;
@@ -50,7 +51,7 @@ $button-hover-color: rgba(0,0,0,0.25);
 
             .post__date {
                 font-size: 0.8em;
-                color:gray;
+                color:$layer1-darkest;
             }
 
         }
