--- a/resources/css/public/comment.scss
+++ b/resources/css/public/comment.scss
@@ -1,29 +1,29 @@
 @import '../base';
 
-.comment {
+.submission {
     border: 1px solid gray;
     width: 50%;
     margin:20px auto 20px auto;
     padding:10px;
 
-    .crumb__current {
+    .breadcrumb__current {
         color: $layer1-darker;
     }
 
-    .comment__author {
+    .submission__author {
         margin:0;
     }
 
-    .comment__body {
+    .submission__body {
         padding:10px;
     }
     
-    .comment__created {
+    .submission__created {
         color:$layer2-darker;
     }
 
     /* css class for the write-comment form */
-    .comment__write {
+    .submission__write {
         
         .write__field {
             min-height:25px;
@@ -36,21 +36,21 @@
 
     } 
 
-    .child {
+    .comment {
         padding:5px;
         margin: 5px 0 5px 0;
         border:1px solid $layer2-darker;
-        .child__author {
+        .comment__author {
             font-size: 0.8em;
         }
 
-        .child__body {
+        .comment__body {
             border-top:1px solid $layer2-dark;
             border-bottom:1px solid $layer2-dark;
             padding: 10px;
         }
 
-        .child__menu {
+        .comment__menu {
             font-size: 0.8em;
             justify-content: flex-end;
             flex-wrap: wrap;
